--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,7 @@ permalink: pretty
 theme: jekyll_patternbot
 
 patternbot:
+  title: "Dino Rescue"
+  description: |
+  A small local dinosaur rescue organization specializing in herbivores. Dinos are in danger and we need to save them all!
   font_url: "https://fonts.google.com/?selection.family=Muli:400,700"
