--- a/_config.yml
+++ b/_config.yml
@@ -4,19 +4,19 @@ theme: jekyll_patternbot
 patternbot:
   title: "Dino Rescue"
   description: |
-  A small local dinosaur rescue organization specializing in herbivores. Dinos are in danger and we need to save them all!
+    A small local dinosaur rescue organization specializing in herbivores. Dinos are in danger and we need to save them all!
   font_url: "https://fonts.google.com/?selection.family=Muli:400,700"
- colors:
-   background: "--color-secondary-light"
-   accent: "--color-primary-dark"
-   patterns:
-     brand.logos: "--color-primary-light"
-rationales:
-  typefaces.primary: |
-  Georgeia was selected because it's a classic font- for classic creatures. Georgia is used for all body copy and most situations.
-  typefaces.seconary: |
-  PT Sans Narrow is only to be used for highlighting text: headings, buttons, banners, etc.
-  colors.primary: |
-  The primary colours represent herbivores & plants & greenery. They should be used for text and for foregrounds.
-  colors.secondary: |
-  The secondary colours are more neutral, continuing with the earth tones, and should be used for backgrounds.
+  colors:
+    background: "--color-primary"
+    accent: "--color-primary-dark"
+    patterns:
+      brand.logos: "--color-primary-light"
+  rationales:
+    typefaces.primary: |
+      Georgeia was selected because it's a classic font- for classic creatures. Georgia is used for all body copy and most situations.
+    typefaces.seconary: |
+      PT Sans Narrow is only to be used for highlighting text: headings, buttons, banners, etc.
+    colors.primary: |
+      The primary colours represent herbivores & plants & greenery. They should be used for text and for foregrounds.
+    colors.secondary: |
+      The secondary colours are more neutral, continuing with the earth tones, and should be used for backgrounds.
