--- a/_config.yml
+++ b/_config.yml
@@ -2,13 +2,13 @@ permalink: pretty
 theme: jekyll_patternbot
 
 patternbot:
-  title: "Dino Rescue"
+  title: "Coze"
   description: |
-    A small local dinosaur rescue organization specializing in herbivores. Dinos are in danger and we need to save them all!
+    Coze sells only the best hand-crafted home enhancers from artists around the Ottawa area.
   font_url: "https://fonts.google.com/?selection.family=Muli:400,700"
   colors:
     background: "--color-primary"
-    accent: "--color-primary-dark"
+    accent: "--color-secondary"
     patterns:
       brand.logos: "--color-primary-light"
   rationales:
