--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,10 @@ patternbot:
     Coze sells only the best hand-crafted home enhancers from artists around the Ottawa area.
   font_url: "https://fonts.google.com/?selection.family=Muli:400,700|:400,700"
   colors:
-    background: "--color-primary"
-    accent: "--color-secondary"
+    background: "--color-secondary"
+    accent: "--color-primary"
     patterns:
-      brand.logos: "--color-primary-light"
+      brand.logos: "--color-primary"
   rationales:
     typefaces.primary: |
       Crimson Text is being used as my primary font because of it's large x-height and friendly feel. It matches well with the secondary typeface (Multi). Crimson Text is used for all body copy and most situations.
